KThinkBat SVN HEAD:

KThinkBat 0.2.1 - 22 Okt 2006:
   * parse the remaining time if using tp_smapi >= 0.29
   * display the remaining time in the tooltip
   * prepared config dialog for remaining time and rearranged the color choosers 
   * added "is charging" parsing if using tp_smapi
   * FIX: Ticket #4: misaligned text
   * FIX: Ticket #1: Fix font size (re-)calculation problem

KThinkBat 0.2.0 - 08 Sep 2006:
   * Support new tp_smapi versions (greater than 0.26) which ommit the 
     'mWh' part of the power values to stay sysfs compliant

KThinkBat 0.1.9 - 04 Aug 2006:
   * ToolTip can be disabled in the Preferences Dialog

KThinkBat 0.1.8 - 28 Jul 2006:
   * nicer layout in the ToolTip (using HTML)
   * get rid of a Preprocessor Makro
   * added Polish translation from Adam Golebiowski <adamg@pld-linux.org>

KThinkBat 0.1.7 - 24 Jul 2006:
   * typo in About box
   * added spanish traslation provided by Luis Guillermo Soblavarro
   * added some more info to the ToolTip

KThinkBat 0.1.6 - 23 Jul 2006:
   * ToolTip with (later more detailed) battery information
   * more code documentation
   * added icons provided by Luis Guillermo Sobalvarro <lgsobalvarro@e-genieria.com>, many thanks

KThinkBat 0.1.5 - 03 Feb 2006:
   * A right click gives now a Context Menu
   * minor code cleanup
   * added German translation

KThinkBat 0.1.5 Release Candidate 2 - 30 Jan 2006:
   * With this version, The Layout of the KThinkBat Applet is now completelly configurable
   * Config as a Singeleton
   * Configuration/Settings Dialog
   * KThinkBat can now display separate battery icons for each battery
   * The Power Meter can be disabled
   * Selectable Fonts

KThinkBat 0.1.5 Release Candidate 1 - 24 Jan 2006:
   * All Colors can be configured (see kthinkbat.kcfg)
   * The Color of the Power Consuption Text can be configured through 
     the Context Menu of KThinkBat
   * The update interval can be changed (in config file only atm)

KThinkBat 0.1.5 Beta 3 - 23 Jan 2006: