@@ -34,6 +34,10 @@
             <default>true</default>
         </entry>
 
+        <entry name="DrawBatteryUpright" type="Bool">
+            <label>Draw the battery gauge upright.</label>
+            <default>false</default>
+        </entry>
         <entry name="GaugeWidth" type="Int">
             <label>Battery Gauge Width.</label>
             <default>46</default>
