@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>600</width>
-            <height>703</height>
+            <width>500</width>
+            <height>534</height>
         </rect>
     </property>
     <property name="maximumSize">
@@ -25,143 +25,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QGroupBox" row="3" column="0" rowspan="1" colspan="2">
-            <property name="name">
-                <cstring>groupBox2</cstring>
-            </property>
-            <property name="title">
-                <string>Size</string>
-            </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <widget class="QLabel" row="0" column="0">
-                    <property name="name">
-                        <cstring>textLabel3_2</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Gauge Size:</string>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="0" column="4">
-                    <property name="name">
-                        <cstring>textLabel4_2</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Height</string>
-                    </property>
-                </widget>
-                <widget class="QSpinBox" row="0" column="3">
-                    <property name="name">
-                        <cstring>kcfg_GaugeWidth</cstring>
-                    </property>
-                    <property name="minValue">
-                        <number>20</number>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="0" column="2">
-                    <property name="name">
-                        <cstring>textLabel5</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Width</string>
-                    </property>
-                </widget>
-                <spacer row="0" column="1">
-                    <property name="name">
-                        <cstring>spacer16</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>72</width>
-                            <height>21</height>
-                        </size>
-                    </property>
-                </spacer>
-                <widget class="QSpinBox" row="0" column="5">
-                    <property name="name">
-                        <cstring>kcfg_GaugeHeight</cstring>
-                    </property>
-                    <property name="maxValue">
-                        <number>30</number>
-                    </property>
-                    <property name="minValue">
-                        <number>10</number>
-                    </property>
-                </widget>
-                <widget class="QSpinBox" row="1" column="3">
-                    <property name="name">
-                        <cstring>kcfg_GaugeDotWidth</cstring>
-                    </property>
-                    <property name="maxValue">
-                        <number>20</number>
-                    </property>
-                    <property name="minValue">
-                        <number>2</number>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="1" column="0">
-                    <property name="name">
-                        <cstring>textLabel3_2_2</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Gauge Dot Size:</string>
-                    </property>
-                </widget>
-                <spacer row="1" column="1">
-                    <property name="name">
-                        <cstring>spacer16_2</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>155</width>
-                            <height>21</height>
-                        </size>
-                    </property>
-                </spacer>
-                <widget class="QLabel" row="1" column="2">
-                    <property name="name">
-                        <cstring>textLabel5_2</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Width</string>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="1" column="4">
-                    <property name="name">
-                        <cstring>textLabel4_2_2</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Height</string>
-                    </property>
-                </widget>
-                <widget class="QSpinBox" row="1" column="5">
-                    <property name="name">
-                        <cstring>kcfg_GaugeDotHeight</cstring>
-                    </property>
-                    <property name="maxValue">
-                        <number>20</number>
-                    </property>
-                    <property name="minValue">
-                        <number>2</number>
-                    </property>
-                </widget>
-            </grid>
-        </widget>
-        <widget class="QGroupBox" row="4" column="0" rowspan="1" colspan="2">
+        <widget class="QGroupBox" row="3" column="0">
             <property name="name">
                 <cstring>groupBox4</cstring>
             </property>
@@ -234,24 +98,7 @@
                 </spacer>
             </grid>
         </widget>
-        <spacer row="5" column="0">
-            <property name="name">
-                <cstring>spacer6</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Vertical</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>16</height>
-                </size>
-            </property>
-        </spacer>
-        <widget class="QGroupBox" row="2" column="0" rowspan="1" colspan="2">
+        <widget class="QGroupBox" row="1" column="0">
             <property name="name">
                 <cstring>groupBox3</cstring>
             </property>
@@ -465,7 +312,171 @@
                 </widget>
             </grid>
         </widget>
-        <widget class="QGroupBox" row="1" column="0">
+        <spacer row="4" column="0">
+            <property name="name">
+                <cstring>spacer6</cstring>
+            </property>
+            <property name="orientation">
+                <enum>Vertical</enum>
+            </property>
+            <property name="sizeType">
+                <enum>Expanding</enum>
+            </property>
+            <property name="sizeHint">
+                <size>
+                    <width>20</width>
+                    <height>16</height>
+                </size>
+            </property>
+        </spacer>
+        <widget class="QGroupBox" row="2" column="0">
+            <property name="name">
+                <cstring>groupBox2</cstring>
+            </property>
+            <property name="title">
+                <string>Size</string>
+            </property>
+            <grid>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QSpinBox" row="2" column="5">
+                    <property name="name">
+                        <cstring>kcfg_GaugeDotHeight</cstring>
+                    </property>
+                    <property name="maxValue">
+                        <number>20</number>
+                    </property>
+                    <property name="minValue">
+                        <number>2</number>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="2" column="4">
+                    <property name="name">
+                        <cstring>textLabel4_2_2</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Height</string>
+                    </property>
+                </widget>
+                <widget class="QSpinBox" row="1" column="3">
+                    <property name="name">
+                        <cstring>kcfg_GaugeWidth</cstring>
+                    </property>
+                    <property name="minValue">
+                        <number>20</number>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="1" column="4">
+                    <property name="name">
+                        <cstring>textLabel4_2</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Height</string>
+                    </property>
+                </widget>
+                <spacer row="2" column="1">
+                    <property name="name">
+                        <cstring>spacer16_2</cstring>
+                    </property>
+                    <property name="orientation">
+                        <enum>Horizontal</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>Expanding</enum>
+                    </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>155</width>
+                            <height>21</height>
+                        </size>
+                    </property>
+                </spacer>
+                <widget class="QLabel" row="2" column="2">
+                    <property name="name">
+                        <cstring>textLabel5_2</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Width</string>
+                    </property>
+                </widget>
+                <widget class="QSpinBox" row="2" column="3">
+                    <property name="name">
+                        <cstring>kcfg_GaugeDotWidth</cstring>
+                    </property>
+                    <property name="maxValue">
+                        <number>20</number>
+                    </property>
+                    <property name="minValue">
+                        <number>2</number>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="1" column="2">
+                    <property name="name">
+                        <cstring>textLabel5</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Width</string>
+                    </property>
+                </widget>
+                <widget class="QSpinBox" row="1" column="5">
+                    <property name="name">
+                        <cstring>kcfg_GaugeHeight</cstring>
+                    </property>
+                    <property name="maxValue">
+                        <number>30</number>
+                    </property>
+                    <property name="minValue">
+                        <number>10</number>
+                    </property>
+                </widget>
+                <spacer row="1" column="1">
+                    <property name="name">
+                        <cstring>spacer16</cstring>
+                    </property>
+                    <property name="orientation">
+                        <enum>Horizontal</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>Expanding</enum>
+                    </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>72</width>
+                            <height>21</height>
+                        </size>
+                    </property>
+                </spacer>
+                <widget class="QCheckBox" row="0" column="0" rowspan="1" colspan="4">
+                    <property name="name">
+                        <cstring>kcfg_DrawBatteryUpright</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Draw Batter&amp;y upright</string>
+                    </property>
+                    <property name="accel">
+                        <string>Alt+Y</string>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="2" column="0">
+                    <property name="name">
+                        <cstring>textLabel3_2_2</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Gauge Dot Size:</string>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="1" column="0">
+                    <property name="name">
+                        <cstring>textLabel3_2</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Gauge Size:</string>
+                    </property>
+                </widget>
+            </grid>
+        </widget>
+        <widget class="QGroupBox" row="0" column="0">
             <property name="name">
                 <cstring>groupBox3_2</cstring>
             </property>
@@ -605,16 +616,28 @@
                 </widget>
             </grid>
         </widget>
-        <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
-            <property name="name">
-                <cstring>textLabel5_3</cstring>
-            </property>
-            <property name="text">
-                <string>textLabel5</string>
-            </property>
-        </widget>
     </grid>
 </widget>
+<tabstops>
+    <tabstop>kcfg_SummarizeBatteries</tabstop>
+    <tabstop>kcfg_ShowRemainingTime</tabstop>
+    <tabstop>kcfg_ShowPowerMeter</tabstop>
+    <tabstop>kcfg_PowerMeterBelowGauge</tabstop>
+    <tabstop>kcfg_DrawBatteryUpright</tabstop>
+    <tabstop>kcfg_GaugeFont</tabstop>
+    <tabstop>kcfg_PowerMeterFont</tabstop>
+    <tabstop>kcfg_BatCriticalColor</tabstop>
+    <tabstop>kcfg_BatBackgroundColor</tabstop>
+    <tabstop>kcfg_BatChargedColor</tabstop>
+    <tabstop>kcfg_PowerMeterColor</tabstop>
+    <tabstop>kcfg_GaugeDotHeight</tabstop>
+    <tabstop>kcfg_GaugeWidth</tabstop>
+    <tabstop>kcfg_GaugeDotWidth</tabstop>
+    <tabstop>kcfg_GaugeHeight</tabstop>
+    <tabstop>kcfg_ShowToolTip</tabstop>
+    <tabstop>kcfg_UpdateIntervalMsek</tabstop>
+    <tabstop>kcfg_CriticalFill</tabstop>
+</tabstops>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>kfontcombo.h</includehint>
